# warning-light

./: .gitignore  Cargo.toml  README.md  justfile  warning-light.service
cad/: asm.FCStd  back_cutout.FCStd  bottom.FCStd  front_back.FCStd  left_right.FCStd  sheet.FCStd  top.FCStd  warning-light.step
macros/: mount_locations.py  warning_light_pcb_layout.py
pcb/: mount_locations.json  warning-light.kicad_sym
pcb/warning-light/: fp-info-cache  fp-lib-table  sym-lib-table  warning-light.kicad_pcb  warning-light.kicad_prl  warning-light.kicad_pro  warning-light.kicad_sch
pcb/warning-light.pretty/: 01x02 pwr_input.kicad_mod  01x02 relay_conn.kicad_mod  relay.kicad_mod
src/: logging.rs  main.rs  matrix.rs  pi.rs
